Initial commit: Smart Task Manager with comprehensive setup and security

--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -1,3 +1,7 @@
+$brand-red: #D2232A;
+$brand-white: #FFFFFF;
+$brand-black: #181818;
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
