--- a/client/src/assets/scss/components/_button.scss
+++ b/client/src/assets/scss/components/_button.scss
@@ -14,7 +14,7 @@
   @apply bg-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700   text-white hover:bg-gray-900;
 }
 .btn-primary {
-  @apply bg-indigo-500  text-white hover:bg-indigo-600;
+  @apply bg-[#D2232A] text-white hover:bg-[#b71c22];
 }
 .btn-secondary {
   @apply bg-fuchsia-500  text-white hover:bg-fuchsia-600;
@@ -46,13 +46,13 @@
   @apply bg-gray-900 text-white;
 }
 .btn-outline-primary {
-  @apply bg-transparent text-indigo-500 border border-indigo-500  hover:text-white hover:bg-indigo-500;
+  @apply bg-transparent text-[#D2232A] border border-[#D2232A] hover:text-white hover:bg-[#D2232A];
   &.active {
-    @apply bg-indigo-500 text-white;
+    @apply bg-[#D2232A] text-white;
   }
 }
 [aria-expanded="true"] > .btn-outline-primary {
-  @apply bg-indigo-500 text-white;
+  @apply bg-[#D2232A] text-white;
 }
 .btn-outline-secondary {
   @apply bg-transparent text-fuchsia-500 border border-fuchsia-500  hover:text-white hover:bg-fuchsia-500;
